--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.39'
     compile 'jstl:jstl:1.2'
     compile 'org.jasypt:jasypt:1.9.2'
+    compile 'commons-fileupload:commons-fileupload:1.3.2'
 }
